Correção de Erros
Corrigindo erros que apareceram após o merge onde tinha sobreposição de nomes e falhas sistemicas.