@@ -3,39 +3,27 @@ package com.SkinLoot.SkinLoot.service;
 import com.SkinLoot.SkinLoot.dto.SkinResponse;
 import com.SkinLoot.SkinLoot.model.Skin;
 import com.SkinLoot.SkinLoot.repository.SkinRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor // Forma moderna de injeção de dependência com Lombok
 public class SkinService {
 
-    @Autowired
-    private SkinRepository skinRepository;
+    private final SkinRepository skinRepository;
 
-    private SkinResponse toDto(Skin s) {
-        return new SkinResponse(
-                s.getId(),
-                s.getNome(),
-                s.getDescricao(),
-                s.getIcon(),
-                s.getRaridade(),
-                s.getQualidade(),
-                s.getDesgastefloat(),
-                s.getAssetId(),
-                s.getJogo().getId(),
-                s.getJogo().getNome()
-        );
-    }
+    // ✅ O método privado "toDto" foi REMOVIDO! Ele não é mais necessário.
 
     public SkinResponse salvarERetornarDto(Skin skin) {
-        Skin salva = skinRepository.save(skin);
-        return toDto(salva); // usa o método privado
+        Skin skinSalva = skinRepository.save(skin);
+        // Chama o construtor diretamente. Simples e limpo.
+        return new SkinResponse(skinSalva);
     }
-
 
     public Skin salvar(Skin skin) {
         return skinRepository.save(skin);
@@ -43,27 +31,23 @@ public class SkinService {
 
     public List<SkinResponse> listarPorUsuario(UUID usuarioId) {
         return skinRepository.findByUsuarioId(usuarioId).stream()
-                .map(this::toDto)
-                .toList();
+                .map(SkinResponse::new) // ✅ Forma correta e moderna de mapear
+                .collect(Collectors.toList());
     }
-
 
     public List<SkinResponse> listarPorJogo(UUID jogoId) {
         return skinRepository.findByJogoId(jogoId).stream()
-                .map(this::toDto)
-                .toList();
+                .map(SkinResponse::new) // ✅ Forma correta e moderna de mapear
+                .collect(Collectors.toList());
     }
 
     public List<SkinResponse> listarTodas() {
         return skinRepository.findAll().stream()
-                .map(this::toDto)
-                .toList();
+                .map(SkinResponse::new) // ✅ Forma correta e moderna de mapear
+                .collect(Collectors.toList());
     }
-
-
 
     public Optional<Skin> buscarPorId(UUID id) {
         return skinRepository.findById(id);
     }
 }
-
